[tool.poetry]
name = "xchainpy-dev"
version = "0.1.0"
description = "XChainPy development and testing"
authors = ["Tirinox <developer@tirinox.ru>"]
license = "MIT"
readme = "README.md"
packages = [{include = "xchainpy_dev"}]

[tool.poetry.dependencies]
python = "3.7"

[tool.poetry.group.dev.dependencies]
twine = "setuptools"
wheel = "pytest"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
