[tool.poetry]
name = "xchainpy-dev"
version = "0.1.0"
description = "XChainPy development and testing"
authors = ["Tirinox <developer@tirinox.ru>"]
license = "MIT"
readme = "README.md"
# packages = [{include = "xchainpy_dev"}]

[tool.poetry.dependencies]
python = "3.9.6"
aiohttp = "^3.8.4"
bip-utils = "^2.7.0"
pycryptodome = "^3.17"

[tool.poetry.group.dev.dependencies]
wheel = "^0.40.0"
twine = "^4.0.2"
setuptools = "^67.6.1"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
